api specification changed. DTO renamed. Field "vacations" added to UserDTO
