# src/main/java/ru/vtb/slepenkov/datamanager/controller/DataManagerController.java
@@ -6,9 +6,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import ru.vtb.slepenkov.datamanager.converter.UserConverter;
-import ru.vtb.slepenkov.datamanager.generated.dto.UserWithId;
-import ru.vtb.slepenkov.datamanager.generated.dto.UserWithDescription;
 import ru.vtb.slepenkov.datamanager.generated.dto.OrderBy;
+import ru.vtb.slepenkov.datamanager.generated.dto.UserShortDTO;
+import ru.vtb.slepenkov.datamanager.generated.dto.UserDTO;
 import ru.vtb.slepenkov.datamanager.service.IUserService;
 
 import javax.validation.Valid;
@@ -24,7 +24,7 @@ public class DataManagerController {
     private final OrderBy defaultOrder = new OrderBy();
 
     @GetMapping("/users")
-    public Page<UserWithId> list(@RequestParam(name = "orderBy", required = false) OrderBy orderBy,
+    public Page<UserShortDTO> list(@RequestParam(name = "orderBy", required = false) OrderBy orderBy,
                                  @RequestParam(name = "pageIndex", required = false, defaultValue = "0") Integer pageIndex,
                                  @RequestParam(name = "numElements", required = false, defaultValue = "1") Integer numElements) {
         orderBy = Objects.isNull(orderBy) ? defaultOrder : orderBy;
@@ -32,17 +32,17 @@ public class DataManagerController {
     }
 
     @PostMapping("/users")
-    public UserWithDescription create(@Valid @RequestBody UserWithDescription user) {
+    public UserDTO create(@Valid @RequestBody UserDTO user) {
         return converter.toDTO(service.create(converter.from(user)));
     }
 
     @GetMapping("/user/{userId}")
-    public UserWithDescription findById(@PathVariable(name = "userId") Long id) {
+    public UserDTO findById(@PathVariable(name = "userId") Long id) {
         return converter.toDTO(service.findById(id));
     }
 
     @PutMapping("/user/{userId}")
-    public UserWithDescription update(@PathVariable(name = "userId") Long id, @Valid @RequestBody UserWithDescription user) {
+    public UserDTO update(@PathVariable(name = "userId") Long id, @Valid @RequestBody UserDTO user) {
         return converter.toDTO(service.update(id, converter.from(user)));
     }
 
