# src/main/resources/users/api.yaml
@@ -9,7 +9,7 @@ info:
     email: SkyWaet@gmail.com
 components:
   schemas:
-    userWithId:
+    UserShortDTO:
       type: object
       properties:
         id:
@@ -49,7 +49,7 @@ components:
         - login
         - password
 
-    userWithDescription:
+    UserDTO:
       type: object
       properties:
         id:
@@ -90,10 +90,28 @@ components:
           nullable: true
           maxLength: 1536
           description: description of user
+        vacations:
+          type: array
+          items:
+            $ref: '#'#/components/schemas/VacationDTO'
       required:
         - login
         - password
 
+    VacationDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          minimum: 0
+          readOnly: true
+        from:
+          type: string
+          format: date-time
+        to:
+          type: string
+          format: date-time
 
 
   examples:
